--- a/school_prerequisits/views/program_view.xml
+++ b/school_prerequisits/views/program_view.xml
@@ -31,6 +31,7 @@
             <field name="arch" type="xml">
                 <tree editable="bottom">
                     <field name="course_id" string="Course Group" />
+                    <field name="course_group_uid"/>
                     <field name="preriquisit_id" />
                 </tree>
             </field>
@@ -43,11 +44,11 @@
                 <search string="Search Prerequisit">
                     <field
                     name="name"
-                    filter_domain="['|',('course_id.name','ilike',self),('course_id.uid','ilike',self)]"
+                    filter_domain="['|',('course_id.name','ilike',self),('course_group_uid','ilike',self)]"
                 />
                     <field
-                    name="uid"
-                    filter_domain="[('course_id.uid','ilike',self)]"
+                    name="course_group_uid"
+                    filter_domain="[('course_group_uid','ilike',self)]"
                 />
                     <filter
                     string="Current Year"
@@ -112,6 +113,7 @@
             <field name="arch" type="xml">
                 <tree editable="bottom">
                     <field name="course_id" string="Course Group" />
+                    <field name="course_group_uid"/>
                     <field name="coriquisit_id" />
                 </tree>
             </field>
@@ -124,11 +126,11 @@
                 <search string="Search Corequisit">
                     <field
                     name="name"
-                    filter_domain="['|',('course_id.name','ilike',self),('course_id.uid','ilike',self)]"
+                    filter_domain="['|',('course_id.name','ilike',self),('course_group_uid','ilike',self)]"
                 />
                     <field
-                    name="uid"
-                    filter_domain="[('course_id.uid','ilike',self)]"
+                    name="course_group_uid"
+                    filter_domain="[('course_group_uid','ilike',self)]"
                 />
                     <filter
                     string="Current Year"
